export type AccomplishmentDto = {
  id: string;
  title: string;
  narrative: string;
  skillTags: string[];
  ordinal: number;
};
