---
title: TailoredIn — Database ERD (PostgreSQL)
---

erDiagram

    %% ──────────────────────────────────────────────
    %%  Tables
    %% ──────────────────────────────────────────────

    accomplishments {
        uuid id PK
        uuid experience_id FK
        text title
        text narrative
        integer ordinal
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    applications {
        uuid id PK
        uuid profile_id FK
        uuid company_id FK
        application_status status
        uuid job_description_id FK "nullable"
        text notes "nullable"
        uuid resume_content_id FK "nullable"
        text archive_reason "nullable"
        text withdraw_reason "nullable"
        timestamp applied_at
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    companies {
        uuid id PK
        text name
        text domain_name UK
        text description "nullable"
        text website UK "nullable"
        text logo_url "nullable"
        text linkedin_link UK "nullable"
        business_type business_type
        industry industry
        company_stage stage
        company_status status
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    educations {
        uuid id PK
        uuid profile_id FK
        text degree_title
        text institution_name
        integer graduation_year
        text location "nullable"
        text honors "nullable"
        integer ordinal
        boolean hidden_by_default
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    experiences {
        uuid id PK
        uuid profile_id FK
        text title
        text company_name
        text company_website "nullable"
        text company_accent "nullable"
        uuid company_id FK "nullable"
        text location
        text start_date
        text end_date
        text summary "nullable"
        integer ordinal
        integer bullet_min
        integer bullet_max
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    generation_prompts {
        uuid id PK
        uuid generation_settings_id FK
        generation_scope scope
        text content
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    generation_settings {
        uuid id PK
        uuid profile_id FK
        model_tier model_tier
        integer bullet_min
        integer bullet_max
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    job_descriptions {
        uuid id PK
        uuid company_id FK
        text title
        text description
        text url "nullable"
        text location "nullable"
        integer salary_min "nullable"
        integer salary_max "nullable"
        text salary_currency "nullable"
        job_level level
        location_type location_type
        job_source source
        timestamp posted_at "nullable"
        text raw_text "nullable"
        json sought_hard_skills "nullable"
        json sought_soft_skills "nullable"
        bytea resume_pdf "nullable"
        text resume_pdf_theme "nullable"
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    job_fit_requirements {
        uuid id PK
        uuid job_fit_score_id FK
        text requirement
        text coverage
        text reasoning
        integer ordinal
    }

    job_fit_scores {
        uuid id PK
        uuid profile_id FK
        uuid job_description_id FK
        integer overall
        text summary
        timestamp created_at "default: CURRENT_TIMESTAMP"
    }

    profiles {
        uuid id PK
        text email
        text first_name
        text last_name
        text about "nullable"
        text phone "nullable"
        text github_url "nullable"
        text linkedin_url "nullable"
        text website_url "nullable"
        text location "nullable"
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    resume_contents {
        uuid id PK
        uuid profile_id FK
        uuid job_description_id FK
        text headline
        json experiences
        json hidden_education_ids
        text prompt
        json schema "nullable"
        json score "nullable"
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    %% ──────────────────────────────────────────────
    %%  Relationships
    %% ──────────────────────────────────────────────

    experiences ||--o{ accomplishments : "has"
    profiles ||--o{ applications : "has"
    companies ||--o{ applications : "has"
    job_descriptions ||--o{ applications : "has"
    resume_contents ||--o{ applications : "has"
    profiles ||--o{ educations : "has"
    profiles ||--o{ experiences : "has"
    companies ||--o{ experiences : "has"
    generation_settings ||--o{ generation_prompts : "has"
    profiles ||--o{ generation_settings : "has"
    companies ||--o{ job_descriptions : "has"
    job_fit_scores ||--o{ job_fit_requirements : "has"
    profiles ||--o{ job_fit_scores : "has"
    job_descriptions ||--o{ job_fit_scores : "has"
    profiles ||--o{ resume_contents : "has"
    job_descriptions ||--o{ resume_contents : "has"

    %% ──────────────────────────────────────────────
    %%  Styles
    %% ──────────────────────────────────────────────

    classDef group0 fill:#dae8fc,stroke:#6c8ebf,stroke-width:2px
    class accomplishments group0
    class applications group0
    class companies group0
    class educations group0
    class experiences group0
    class generation_prompts group0
    class generation_settings group0
    class job_descriptions group0
    class job_fit_requirements group0
    class job_fit_scores group0
    class profiles group0
    class resume_contents group0
